# tokimo-app-qq-music

./: .gitignore  Cargo.toml  README.md  lefthook.yml  tokimo-app.toml
.github/workflows/: ci.yml
src/: app_server.rs  assets.rs  error.rs  lib.rs  main.rs  openapi_client.rs  qq.rs  qrc.rs  types.rs
src/handlers/: mod.rs
tests/: export_bindings.rs
ui/: package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css  index.tsx
ui/src/api/: client.ts
ui/src/components/: HomeView.tsx  LoginDialog.tsx  NowPlayingView.tsx  PlaybackMenus.tsx  PlayerBar.tsx  PlaylistView.tsx  SearchView.tsx  Sidebar.tsx  TrackTable.tsx  format.ts
ui/src/types/: domain.ts
