[package]
name        = "tokimo-app-qq-music"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "Tokimo QQ Music app"
repository  = "https://github.com/tokimo-lab/tokimo-app-qq-music"

[workspace]

[lib]
name = "tokimo_app_qq_music"
path = "src/lib.rs"

[[bin]]
name = "tokimo-app-qq-music"
path = "src/main.rs"

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843", features = ["axum"] }
tokimo-bus-auth     = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843", features = ["axum", "cli-db"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }

anyhow             = "1"
axum               = { version = "0.8", features = ["json"] }
base64             = "0.22"
clap               = { version = "4", features = ["derive", "env"] }
flate2             = "1"
futures-util       = "0.3"
hex                = "0.4"
mime_guess         = "2"
reqwest            = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "stream"] }
rust-embed         = { version = "8", features = ["debug-embed"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "sync"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs              = { version = "12", features = ["serde-json-impl"] }
